--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h1 {
     text-align: center;
 }
 
-.error {
+.errorMsg {
   display: none;
   background-color: rgba(255, 0, 0, 0.1); /* merah transparan */
   color: #fff;
